--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			</div>
 		</div><!-- menu area end -->
 		<!-- hero area start -->
-		<section class="hero">
+		<section class="hero" >
 			<div class="fluid-container">
 				<div id="carouselExampleCaptions" class="carousel slide">
 					<div class="carousel-indicators">
@@ -86,24 +86,24 @@
 					</div>
 					<div class="carousel-inner">
 					  <div class="carousel-item active">
-						<img src="https://source.unsplash.com/1600x400/?hydroponic" class="d-block w-100" alt="">
-						<div class="carousel-caption d-none d-md-block">
-						  <h5>First slide label</h5>
-						  <p>Some representative placeholder content for the first slide.</p>
+						<img src="assets\img\hydrophonic3.jpeg" class="d-block w-100" alt="" >
+						<div class="carousel-caption  ">
+							 <h1 class="bigword">Solar Green House Hydroponic Solutions</h1>
+					            <p>Water Energy Food Nexus (WEFN)</p>
 						</div>
 					  </div>
 					  <div class="carousel-item">
-						<img src="https://source.unsplash.com/1600x400/?hydroponic" class="d-block w-100" alt="">
-						<div class="carousel-caption d-none d-md-block">
-						  <h5>Second slide label</h5>
-						  <p>Some representative placeholder content for the second slide.</p>
+						<img src="assets\img\hydrophonic.jpeg" class="d-block w-100" alt="">
+						<div class="carousel-caption  ">
+						  <h1 class="bigword">Rural farmers and Urban Users</h1>
+					      <p>Design and setup of SMART Solar based Hydroponic System.</p>
 						</div>
 					  </div>
 					  <div class="carousel-item">
-						<img src="https://source.unsplash.com/1600x400/?hydroponic" class="d-block w-100" alt="">
-						<div class="carousel-caption d-none d-md-block">
-						  <h5>Third slide label</h5>
-						  <p>Some representative placeholder content for the third slide.</p>
+						<img src="assets\img\hydrophonic1.jpeg" class="d-block w-100" alt="">
+						<div class="carousel-caption  ">
+						   <h1 class="bigword">Water Energy Food Nexus (WEFN)</h1>
+					       <p>Empirically linking Water Energy Food Nexus (WEFN) with experimental data in Dehradun Valley, Uttarakhand.</p>
 						</div>
 					  </div>
 					</div>
@@ -160,7 +160,7 @@
 					<div class="col-lg-6">
 					    <div class="about-area-info">
 					        <h2>About Us</h2>
-					        <p>Water Energy Food Nexus (WEFN) Through Solar Green House Based Hydroponic Solutions with Android Mobile Application of Vegetable Market for Rural farmers and Urban Users’ is a major R&D project supported by the Department of Science and Technology (WTI/DST) under Water Energy Food Nexus call of the proposal. Uttarakhand State Council for Science and Technology (UCOST), Dehradun is a lead organization in this study with collaborators TERI-SAS, New Delhi, G. B. Pant University of Agriculture and Technology, Pantnagar and DAV (PG) College, Dehradun.
+					        <p>Water Energy Food Nexus (WEFN) Through Solar Green House Based Hydroponic Solutions with Android Mobile Application of Vegetable Market for Rural farmers and Urban Users’ is a major R&D project supported by the Department of Science and Technology (WTI/DST) under Water Energy Food Nexus call of the proposal. Uttarakhand State Council for Science and Technology (UCOST), Dehradun Under this project, a SMART Solar-based Hydroponic System having Automated Monitoring and controlling environmental parameters (temperature, humidity, pH, conductivity, etc) has been installed on Council's premises. In this study, we have also developed an Android Mobile Application for Farmers which provides a link between transportation, storage, and markets of hydroponic and other crops. This Solar based Greenhouse system established at Council is one of the best greenhouse designs incorporating a source of renewable energy (solar energy) and monitoring and control of the internal greenhouse environment can be done through an automation unit. This study model can be replicated in other areas of the state as well as in entire Himalayan ecosystem. Solar-based hydroponic farming will be helpful for better economic returns to the local farmers aiming to reduce their water and energy footprint. This is a State of Art lab-cum Solar Green House for Hydroponic production in Doon Valley, which is a technology demonstration-cum-dissemination centre and is beneficial for the Himalayan farmer's community. It is a representative model of any small valley of Uttarakhand.
  </p>
  					    </div>
 					</div>
@@ -174,7 +174,6 @@
 					<div class="col-lg-12">
 					    <div class="sec-title">
 					        <h2>HydroPonic gallery</h2>
-					        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever</p>
 					    </div>
 					</div>
 				</div>
